# npmmirs

./: Cargo.toml  LICENSE  README.md
src/: checksum.rs  downloader.rs  error.rs  main.rs  meta_cache.rs  metadata.rs  mirror.rs  progress.rs  range_cache.rs
src/metadata/: manifest.rs  package_index.rs  sparse_metadata.rs
