[package]
name = "npmmirs"
version = "0.1.0"
edition = "2024"

[dependencies]
ahash = { version = "0.8.11", features = ["serde"] }
async-channel = "2.3.1"
chrono = "0.4.40"
clap = { version = "4.5.32", features = ["env", "derive", "cargo"] }
compact_str = { version = "0.9.0", features = ["serde"] }
console = "0.15.11"
dotenv = "0.15.0"
hex = "0.4.3"
indicatif = "0.17.11"
nodejs-semver = { version = "4.1.0", features = ["serde"] }
reqwest = "0.12.15"
serde = "1.0.219"
serde_json = "1.0.140"
sha2 = "0.10.8"
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread", "fs"] }
urlencoding = "2.1.3"
walkdir = "2.5.0"

